--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main page</title>
 </head>
 <body>
-    <h1></h1>
+    <header></header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer>
+        <p>Web Studio</p>
+        <br>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 </html>
