--- a/index.html
+++ b/index.html
@@ -6,12 +6,52 @@
     <title>Main page</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <a href="">WEB STUDIO</a>
+        <nav>
+            <ul>
+                <li>Studio</li>
+                <li>Portfolio</li>
+                <li>Contacts</li>
+            </ul>
+        </nav>
+        <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        </address>
+    </header>
+    
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <br>
+
+            <button>Order Service</button>
+        </section>
+        <section>
+            <h3>Strategy</h3>
+            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+
+            <h3>Punctuality</h3>
+            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+
+            <h3>Diligence</h3>
+            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+
+            <h3>Technologies</h3>
+            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        </section>
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li><img src="./images/our-team/img-1.png"><br>Mark Guerrero <br>Product Designer</li>
+                <li><img src="./images/our-team/img-2.png"><br>Mark Guerrero <br>Product Designer</li>
+                <li><img src="./images/our-team/img-3.png"><br>Mark Guerrero <br>Product Designer</li>
+                <li><img src="./images/our-team/img-4.png"><br>Mark Guerrero <br>Product Designer</li>
+            </ul>
+        </section>
     </main>
+
     <footer>
         <p>Web Studio</p>
         <br>
