--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="./images/our-team/img-1.png"><br>Mark Guerrero <br>Product Designer</li>
-                <li><img src="./images/our-team/img-2.png"><br>Mark Guerrero <br>Product Designer</li>
-                <li><img src="./images/our-team/img-3.png"><br>Mark Guerrero <br>Product Designer</li>
-                <li><img src="./images/our-team/img-4.png"><br>Mark Guerrero <br>Product Designer</li>
+                <li><img src="./images/our-team/img-1.png" alt="Mark Guerrero"><br>Mark Guerrero <br>Product Designer</li>
+                <li><img src="./images/our-team/img-2.png" alt="Tom Ford"><br>Mark Guerrero <br>Frontend Developer</li>
+                <li><img src="./images/our-team/img-3.png" alt="Camila Garcia"><br>Camila Garcia <br>Marketing</li>
+                <li><img src="./images/our-team/img-4.png" alt="Daniel Wilson"><br>Daniel Wilson <br>UI Designer</li>
             </ul>
         </section>
     </main>
