--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </main>
 
     <footer>
-      <p>Web Studio</p>
+      <a href="./index.html">WebStudio</a>
       <p
         >Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.</p
