section 3 into main section

--- a/index.html
+++ b/index.html
@@ -69,28 +69,30 @@
               src="./images/our-team/img-1.jpg"
               alt="Mark Guerrero"
               width="264"
-            />Guerrero Product Designer</li
+            /><h3>Guerrero</h3><p>Product Designer</p></li
           >
           <li
             ><img
               src="./images/our-team/img-2.jpg"
               alt="Tom Ford"
               width="264"
-            />Tom Ford Frontend Developer</li
-          >
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
           <li
             ><img
               src="./images/our-team/img-3.jpg"
               alt="Camila Garcia"
               width="264"
-            />Camila Garcia Marketing</li
+            /><h3>Camila Garcia</h3> <p>Marketing</p></li
           >
           <li
             ><img
               src="./images/our-team/img-4.jpg"
               alt="Daniel Wilson"
               width="264"
-            />Daniel Wilson UI Designer</li
+            /><h3>Daniel Wilson</h3><p>UI Designer</p></li
           >
         </ul>
       </section>
