--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               src="./images/our-team/img-1.jpg"
               alt="Mark Guerrero"
               width="264"
-            /><h3>Guerrero</h3><p>Product Designer</p></li
+            /><h3>Mark Guerrero</h3><p>Product Designer</p></li
           >
           <li
             ><img
